Fix flicker

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,6 +35,10 @@ margin-bottom: 10px;
   padding: 5px 10px;
   margin: 10px 5px;
 }
+.navbar-nav > li > a {
+  padding: 5px 10px!important;
+  margin: 10px 5px!important;
+}
 .navbar-brand {
       font-weight: 900;
   font-size: 16px;
@@ -49,10 +53,12 @@ margin-bottom: 10px;
 .navbar-inverse .navbar-nav > a {
   background-color: black!important;
   border-radius: 57px;
+  padding: 5px 10px;
+  margin: 10px 5px;
 
 }
 .navbar-inverse .navbar-nav > .active > a {
-  background-color: #4D63DB!important;
+background-color: #4D63DB!important;
 
 
   border-radius: 57px;
@@ -66,9 +72,9 @@ margin-bottom: 10px;
   background-color: #4D63DB!important;opacity:0.8!important;
 
   border-radius: 57px;
+
   padding: 5px 10px;
   margin: 10px 5px;
-
 }
 .dropdown-menu {
   padding: 0;
